Fixed h1 tag to align self flex end for the second tag

--- a/my-react-website/src/style/AboutMe.css
+++ b/my-react-website/src/style/AboutMe.css
@@ -117,6 +117,9 @@
   /* rotate this entire div 180 */
 }
 
+.secondH1Tag{
+  align-self: flex-end;
+}
 
 
 /* this is a test of githubs activity feature */
